# utmn-news-parallel-scraper

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  news.db  pyproject.toml
docker/: Dockerfile  docker-compose.yml
report/: template.md  template.tex
scripts/: init_db.py  run_bench.sh  run_bot.py  run_scraper.py
src/bench/: plot_results.py  runner.py
src/bot/: commands.py  main.py  utils.py
src/scraper/: async_fetcher.py  parser.py  queue_manager.py  storage.py
src/tests/: test_bot.py  test_parser.py  test_storage.py
src/tests/test_data/: news_page.html
src/utils/: logging.py  monitoring.py  timing.py
